--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@olton/datetime",
+  "name": "@olton/string",
   "version": "1.0.0",
-  "description": "Datetime is a minimalist JavaScript library that parses, validates, manipulates, and displays dates and times for node and modern browsers with a comfortable modern API.",
-  "main": "dist/string.cjs.js",
-  "module": "dist/string.esm.js",
+  "description": "String is a minimalist JavaScript library for manipulating with strings for node and modern browsers with a comfortable modern API.",
+  "main": "dist/string.js",
   "type": "module",
   "scripts": {
     "prebuild": "shx rm -rf dist/* lib/*",
@@ -12,17 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/olton/Datetime2.git"
+    "url": "https://github.com/olton/string.git"
   },
   "keywords": [
-    "date",
-    "time",
-    "datetime",
+    "string",
     "javascript",
     "library"
   ],
   "bugs": {
-    "url": "https://github.com/olton/Datetime2/issues"
+    "url": "https://github.com/olton/string/issues"
   },
   "author": "Serhii Pimenov <serhii@pimenov.com.ua> (https://pimenov.com.ua/)",
   "license": "MIT",
@@ -39,18 +36,17 @@
     "maintained node versions"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
-    "@babel/preset-env": "^7.15.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.16.7",
+    "@babel/preset-env": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "chai": "^4.3.4",
-    "glob": "^7.1.7",
-    "jest": "^27.1.0",
-    "rollup": "^2.56.3",
+    "chai": "^4.3.6",
+    "jest": "^28.1.0",
+    "rollup": "^2.75.5",
     "rollup-plugin-terser": "^7.0.2",
-    "shx": "^0.3.3"
+    "shx": "^0.3.4"
   }
 }
