--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "shx rm -rf dist/* lib/*",
     "build": "rollup --config",
-    "test": "jest"
+    "test": "npm run build & jest"
   },
   "repository": {
     "type": "git",
