--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olton/string",
-  "version": "0.2.2",
+  "version": "0.2.0",
   "description": "String is a minimalist JavaScript library for manipulating with strings for node and modern browsers with a comfortable modern API.",
   "main": "dist/string.js",
   "type": "module",
@@ -12,6 +12,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/olton/string.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/olton"
   },
   "keywords": [
     "string",
