--- a/package.json
+++ b/package.json
@@ -36,17 +36,16 @@
     "maintained node versions"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.6",
-    "@babel/plugin-proposal-throw-expressions": "^7.23.3",
-    "@babel/preset-env": "^7.23.6",
-    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "chai": "^4.3.10",
     "jest": "^29.7.0",
     "rollup": "^4.9.0",
-    "rollup-plugin-terser": "^7.0.2",
     "shx": "^0.3.4"
+  },
+  "dependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup-plugin-progress": "^1.1.2"
   }
 }
