--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "shx rm -rf dist/* lib/*",
     "build": "rollup --config",
-    "test": "npm run build & jest"
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
@@ -38,14 +38,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
-    "chai": "^4.3.10",
-    "jest": "^29.7.0",
     "rollup": "^4.9.0",
-    "shx": "^0.3.4"
-  },
-  "dependencies": {
+    "shx": "^0.3.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "rollup-plugin-progress": "^1.1.2"
+    "rollup-plugin-progress": "^1.1.2",
+    "vitest": "^1.0.4"
+  },
+  "dependencies": {
   }
 }
