fix files extentions for imports, add nvl function

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olton/string",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "String is a minimalist JavaScript library for manipulating with strings for node and modern browsers with a comfortable modern API.",
   "main": "dist/string.js",
   "module": "dist/string.js",
@@ -12,7 +12,7 @@
     "clean": "shx rm -rf dist/* lib/*",
     "build": "npm run clean && cross-env MODE=production node build.js",
     "dev": "npm run clean && cross-env MODE=development node build.js",
-    "test": "easytest --verbose",
+    "test": "latte --verbose",
     "pub": "npm publish --access public"
   },
   "repository": {
@@ -33,10 +33,10 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@olton/easytest": "^0.41.1",
     "@olton/esbuild-plugin-progress": "^0.3.0",
+    "@olton/latte": "^0.2.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.25.1",
     "esbuild-plugin-replace": "^1.4.0",
     "shx": "^0.3.4"
   }
