--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olton/string",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "String is a minimalist JavaScript library for manipulating with strings for node and modern browsers with a comfortable modern API.",
   "main": "dist/string.js",
   "module": "dist/string.js",
@@ -12,7 +12,7 @@
     "clean": "shx rm -rf dist/* lib/*",
     "build": "npm run clean && cross-env MODE=production node build.js",
     "dev": "npm run clean && cross-env MODE=development node build.js",
-    "test": "latte",
+    "test": "latte --verbose",
     "pub": "npm publish --access public"
   },
   "repository": {
